fix: add z-index to header because is not showing as sticky

--- a/src/components/ProductGrid/productGrid.scss
+++ b/src/components/ProductGrid/productGrid.scss
@@ -7,6 +7,7 @@
     top: 0;
     background-color: rgba(255, 255, 255, 0.95);
     width: 100%;
+    z-index: 2;
   }
 
   .list-container {
